@@ -327,13 +327,23 @@ if(isset($_POST['message']))
 					$sms_body .= trans('Customer:').' '.$requestor;
 				}
 
+			$notify_author = ConfigHelper::checkConfig('phpui.helpdesk_author_notify');
+			$args = array(
+				'queue' => $queue['id'],
+				'user' => $AUTH->id,
+			);
+			if ($notify_author)
+				unset($args['user']);
+
 			// send email
+			$args['type'] = MSG_MAIL;
 			if ($recipients = $DB->GetCol('SELECT DISTINCT email
-					FROM users, rtrights 
-					WHERE users.id=userid AND queueid = ? AND email != \'\' 
-						AND (rtrights.rights & 8) = 8 AND users.id != ?
-						AND deleted = 0 AND (ntype & ?) = ?',
-					array($queue['id'], $AUTH->id, MSG_MAIL, MSG_MAIL)))
+					FROM users, rtrights
+					WHERE users.id=userid AND queueid = ? AND email != \'\'
+						AND (rtrights.rights & 8) = 8 AND deleted = 0'
+						. ($notify_author ? '' : ' AND users.id <> ?')
+						. ' AND (ntype & ?) > 0',
+					array_values($args)))
 			{
 				foreach($recipients as $email) {
 					$headers['To'] = '<'.$email.'>';
@@ -344,12 +354,14 @@ if(isset($_POST['message']))
 
 			// send sms
 			$service = ConfigHelper::getConfig('sms.service');
+			$args['type'] = MSG_SMS;
 			if (!empty($service) && ($recipients = $DB->GetCol('SELECT DISTINCT phone
-			        FROM users, rtrights
+				FROM users, rtrights
 					WHERE users.id=userid AND queueid = ? AND phone != \'\'
-						AND (rtrights.rights & 8) = 8 AND users.id != ?
-						AND deleted = 0 AND (ntype & ?) = ?',
-					array($queue['id'], $AUTH->id, MSG_SMS, MSG_SMS))))
+						AND (rtrights.rights & 8) = 8 AND deleted = 0'
+						. ($notify_author ? '' : ' AND users.id <> ?')
+						. ' AND (ntype & ?) > 0',
+					array_values($args))))
 			{
 				foreach($recipients as $phone) {
 					$LMS->SendSMS($phone, $sms_body);
